# eldr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/: eldr.icns
menubar/: EldrMenu.swift
packaging/: Info.plist
proto/: README.md  fanwatch  thermalstate.swift  watchdog.conf.example
src/: config.rs  doctor.rs  json.rs  lib.rs  main.rs  mcp.rs  update.rs  watch.rs
src/crypto/: cc.rs  mod.rs  sha256.rs
src/daemon/: bench.rs  cmux.rs  guard.rs  launchd.rs  maint.rs  mod.rs  notify.rs  scrub.rs  watchdog.rs
src/ffi/: battery.rs  cf.rs  iohid.rs  iokit.rs  ioreport.rs  iostat.rs  mach.rs  mod.rs  nvme.rs  proc.rs  smc.rs  thermal.rs
src/sensors/: host.rs  mod.rs  snapshot.rs  soc.rs  system.rs
src/ui/: chart.rs  mod.rs  pretty.rs  style.rs  term.rs  tui.rs
src/ui/tui/: fmt.rs  frame.rs  mod.rs  views.rs
tests/: reversibility.rs
